# Web_module_7

./: README.md  alembic.ini  conect.py  config.ini  db.py  functions.py  insert_to_table.py  main.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/versions/: 3635e3ffc751_init.py
env7/: pyproject.toml
env_hw7/: alembic.ini  pyproject.toml
migration/: env.py
