[tool.poetry]
name = "env7"
version = "0.1.0"
description = ""
authors = ["Nataleia Orlovska <nataleia.orlovska@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.7"
alembic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
